added basic layout

--- a/index.html
+++ b/index.html
@@ -1,35 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    Dashboard
-    Home
-    Profile
-    Messages
-    History
-    Tasks
-    Communitites
+    <div class="sidebar">
+        <h3 id="sidebar-header">Dashboard</h3>
+        <div class="sidebar-nav">
+            <ul>
+                <li>Home</li>
+                <li>Profile</li>
+                <li>Messages</li>
+                <li>History</li>
+                <li>Tasks</li>
+                <li>Communitites</li>
+            </ul>
+        </div>
+        <div class="sidebar-other">
+            <ul>
+                <li>Settings</li>
+                <li>Support</li>
+                <li>Privacy</li>
+            </ul>
+        </div>
+    </div>
+    <div class="header">
+        <div class="searchbar">
+            <form>
+                search button
+                <TExtarea></TExtarea>
+        </div>
 
-    Settings
-    Support
-    Privacy
+        </form>
+        <div class="user-info"> Hi there,
+            Max Mustermann( @m_squared)
+        </div>
 
+        Max Mustermann
+        <div class="buttons"> New
+            Upload
+            Share
+        </div>
+    </div>
+    <div class="main-content">
 
-    Hi there,
-    Max Mustermann( @m_squared)
-    New
-    Upload
-    Share
-    Your Projects
-    Announcements
-    Trending
-    
+        <h3 id="projects-header">Your Projects</h3>
+        <div class="projects">
+            <div class="single-project">
+                <h4>Project 1</h4>
 
+                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
+                labore et
+                dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea
+                rebum.
+                Stet
+                clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit
+                amet,
+                consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
+                aliquyam
+                erat,
+                sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd
+                gubergren,
+
+            </div>
+            <div class="single-project">
+                <h4>Project 2</h4>
+                Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum
+                dolore eu
+                feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent
+                luptatum
+                zzril
+                delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer
+                adipiscing
+                elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+            </div>
+
+            <div class="single-project">
+                <h4>Project 3</h4>
+                Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut
+                aliquip
+                ex ea
+                commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie
+                consequat,
+                vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui
+                blandit
+                praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
+            </div>
+            <div class="single-project">
+                <h4>Project 4</h4>
+                Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat
+                facer
+                possim assum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
+                tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud
+                exerci
+                tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+            </div>
+            <div class="single-project">
+                <h4>Project 5</h4>
+                Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum
+                dolore eu
+                feugiat nulla facilisis.
+
+                At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
+                sanctus
+                est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
+                eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et
+                accusam et
+                justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor
+                sit
+                amet.
+            </div>
+
+            <div class="single-project">
+                <h4>Project 6</h4>
+                Consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
+                ut labore et dolore magna aliquyam erat,
+                sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
+                no
+                sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing
+                elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
+                voluptua. At
+                vero eos et accusam et justo duo dolores et ea rebum. Stet clita
+            </div>
+        </div>
+        <h3 id="announcements-header">Announcements</h3>
+        <div class="announcements">
+
+            Site Maintencance
+            Community Share Day
+            Updated Privacy Policy
+        </div>
+        <h3 id="trending-header">Trending</h3>
+        <div class="trending">
+
+            Consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
+            ut labore et dolore magna aliquyam erat,
+            sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
+            no
+            sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing
+            elitr, sed diam nonumy eirmod tempor invidunt
+        </div>
+    </div>
 
 </body>
+
 </html>
