--- a/index.html
+++ b/index.html
@@ -131,19 +131,32 @@
         <h3 id="announcements-header">Announcements</h3>
         <div class="announcements">
 
-            Site Maintencance
-            Community Share Day
-            Updated Privacy Policy
+            <div class="single-announcement">
+                <h4> Maintencance </h4>
+                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
+                labore et dolore magna aliquyam erat, sed diam voluptua.
+            </div>
+            <div class="single-announcement">
+                <h4> Community Share Day </h4>
+                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
+                labore et dolore magna aliquyam erat, sed diam voluptua.
+            </div>
+            <div class="single-announcement">
+                <h4> Updated Privacy Policy </h4>
+                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
+                labore et dolore magna aliquyam erat, sed diam voluptua.
+            </div>
         </div>
         <h3 id="trending-header">Trending</h3>
         <div class="trending">
-
-            Consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
-            ut labore et dolore magna aliquyam erat,
-            sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
-            no
-            sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing
-            elitr, sed diam nonumy eirmod tempor invidunt
+            @Jett
+            Knife Thrower
+            @Sage
+            Healing life
+            @Sova
+            Shock Dart Consigliere
+            @KJ
+            Robot Enginerr
         </div>
     </div>
 
