added buttons, worked on header

--- a/index.html
+++ b/index.html
@@ -34,17 +34,20 @@
             <form>
                 search button
                 <TExtarea></TExtarea>
+                
+            </form>
         </div>
+<div class="user-settings"> Max Mustermann</div>
 
-        </form>
-        <div class="user-info"> Hi there,
+        <div class="user-greeting"> Hi there,
             Max Mustermann( @m_squared)
         </div>
 
-        Max Mustermann
-        <div class="buttons"> New
-            Upload
-            Share
+
+        <div class="buttons">
+            <button>New</button>
+            <button>Upload</button>
+            <button>Share</button>
         </div>
     </div>
     <div class="main-content">
