--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
         <div class="searchbar">
             <form>
                 search button
-                <TExtarea></TExtarea>
-                
+                <input type="text" placeholder="Search...">
+
             </form>
         </div>
-<div class="user-settings"> Max Mustermann</div>
+        <div class="user-settings"> Max Mustermann</div>
 
         <div class="user-greeting"> Hi there,
             Max Mustermann( @m_squared)
@@ -152,14 +152,18 @@
         </div>
         <h3 id="trending-header">Trending</h3>
         <div class="trending">
-            @Jett
-            Knife Thrower
-            @Sage
-            Healing life
-            @Sova
-            Shock Dart Consigliere
-            @KJ
-            Robot Enginerr
+            <div class="trend-user">
+                @Jett
+                Knife Thrower </div>
+            <div class="trend-user">
+                @Sage
+                Healing life</div>
+            <div class="trend-user">@Sova
+                Shock Dart Consigliere</div>
+            <div class="trend-user">
+                @KJ
+                Robot Enginerr
+            </div>
         </div>
     </div>
 
