--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
 
 <body>
     <div class="sidebar">
-        <h3 id="sidebar-header">Dashboard</h3>
+        <h3 id="sidebar-header"><img alt="dashboard_img">Dashboard</h3>
         <div class="sidebar-nav">
             <ul>
-                <li>Home</li>
-                <li>Profile</li>
-                <li>Messages</li>
-                <li>History</li>
-                <li>Tasks</li>
-                <li>Communitites</li>
+                <li><img alt="home_img">Home</li>
+                <li><img alt="profille_img">Profile</li>
+                <li><img alt="messages_img">Messages</li>
+                <li><img alt="history_img">History</li>
+                <li><img alt="tasks_img">Tasks</li>
+                <li><img alt="communities_img">Communitites</li>
             </ul>
         </div>
         <div class="sidebar-other">
             <ul>
-                <li>Settings</li>
-                <li>Support</li>
-                <li>Privacy</li>
+                <li><img alt="settings_img">Settings</li>
+                <li><img alt="support_img">Support</li>
+                <li><img alt="privacy_img">Privacy</li>
             </ul>
         </div>
     </div>
@@ -37,9 +37,9 @@
 
             </form>
         </div>
-        <div class="user-settings"> Max Mustermann</div>
+        <div class="user-settings"> <img alt="user_profile">Max Mustermann</div>
 
-        <div class="user-greeting"> Hi there,
+        <div class="user-greeting"><img alt="user_profile"> Hi there,
             Max Mustermann( @m_squared)
         </div>
 
@@ -59,16 +59,15 @@
 
                 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
                 labore et
-                dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea
-                rebum.
-                Stet
                 clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit
                 amet,
                 consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
                 aliquyam
-                erat,
-                sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd
-                gubergren,
+                <div class="project-nav">
+                    <img alt="favorite">
+                    <img alt="watch">
+                    <img alt="share">
+                </div>
 
             </div>
             <div class="single-project">
@@ -79,8 +78,12 @@
                 luptatum
                 zzril
                 delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer
-                adipiscing
-                elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+
+                <div class="project-nav">
+                    <img alt="favorite">
+                    <img alt="watch">
+                    <img alt="share">
+                </div>
             </div>
 
             <div class="single-project">
@@ -91,8 +94,11 @@
                 commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie
                 consequat,
                 vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui
-                blandit
-                praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
+                <div class="project-nav">
+                    <img alt="favorite">
+                    <img alt="watch">
+                    <img alt="share">
+                </div>
             </div>
             <div class="single-project">
                 <h4>Project 4</h4>
@@ -100,23 +106,25 @@
                 facer
                 possim assum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
                 tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud
-                exerci
-                tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+                <div class="project-nav">
+                    <img alt="favorite">
+                    <img alt="watch">
+                    <img alt="share">
+                </div>
             </div>
             <div class="single-project">
                 <h4>Project 5</h4>
-                Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum
-                dolore eu
                 feugiat nulla facilisis.
 
                 At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
                 sanctus
                 est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
                 eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et
-                accusam et
-                justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor
-                sit
-                amet.
+                <div class="project-nav">
+                    <img alt="favorite">
+                    <img alt="watch">
+                    <img alt="share">
+                </div>
             </div>
 
             <div class="single-project">
@@ -125,10 +133,11 @@
                 ut labore et dolore magna aliquyam erat,
                 sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
                 no
-                sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing
-                elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
-                voluptua. At
-                vero eos et accusam et justo duo dolores et ea rebum. Stet clita
+                <div class="project-nav">
+                    <img alt="favorite">
+                    <img alt="watch">
+                    <img alt="share">
+                </div>
             </div>
         </div>
         <h3 id="announcements-header">Announcements</h3>
@@ -153,14 +162,22 @@
         <h3 id="trending-header">Trending</h3>
         <div class="trending">
             <div class="trend-user">
+                <img alt="trend-user_profile">
                 @Jett
-                Knife Thrower </div>
+                Knife Thrower
+            </div>
             <div class="trend-user">
+                <img alt="trend-user_profile">
                 @Sage
-                Healing life</div>
-            <div class="trend-user">@Sova
-                Shock Dart Consigliere</div>
+                Healing life
+            </div>
             <div class="trend-user">
+                <img alt="trend-user_profile">
+                @Sova
+                Shock Dart Consigliere
+            </div>
+            <div class="trend-user">
+                <img alt="trend-user_profile">
                 @KJ
                 Robot Enginerr
             </div>
