added svg icons, adjusted size

--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@
         <h3 id="sidebar-header"><img alt="dashboard_img">Dashboard</h3>
         <div class="sidebar-nav">
             <ul>
-                <li><img alt="home_img">Home</li>
-                <li><img alt="profille_img">Profile</li>
-                <li><img alt="messages_img">Messages</li>
-                <li><img alt="history_img">History</li>
-                <li><img alt="tasks_img">Tasks</li>
-                <li><img alt="communities_img">Communitites</li>
+                <li><img src="icons/home-account.svg" alt="home_img">Home</li>
+                <li><img src="icons/account.svg"alt="profille_img">Profile</li>
+                <li><img src="icons/message-outline.svg "alt="messages_img">Messages</li>
+                <li><img src="icons/history.svg "alt="history_img">History</li>
+                <li><img src="icons/note-outline.svg "alt="tasks_img">Tasks</li>
+                <li><img src="icons/account-group.svg"alt="communities_img">Communitites</li>
             </ul>
         </div>
         <div class="sidebar-other">
             <ul>
-                <li><img alt="settings_img">Settings</li>
-                <li><img alt="support_img">Support</li>
-                <li><img alt="privacy_img">Privacy</li>
+                <li><img src="icons/cog-outline.svg"alt="settings_img">Settings</li>
+                <li><img src="icons/chat-question.svg"alt="support_img">Support</li>
+                <li><img src="icons/shield-alert-outline.svg"alt="privacy_img">Privacy</li>
             </ul>
         </div>
     </div>
     <div class="header">
         <div class="searchbar">
             <form>
-                search button
+                <img src="icons/magnify.svg" alt="search">
                 <input type="text" placeholder="Search...">
 
             </form>
@@ -64,9 +64,9 @@
                 consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
                 aliquyam
                 <div class="project-nav">
-                    <img alt="favorite">
-                    <img alt="watch">
-                    <img alt="share">
+                    <img src="icons/star-plus-outline.svg"alt="favorite">
+                    <img src="icons/eye-plus-outline.svg"alt="watch">
+                    <img src="icons/share-variant-outline.svg"alt="share">
                 </div>
 
             </div>
@@ -80,9 +80,9 @@
                 delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer
 
                 <div class="project-nav">
-                    <img alt="favorite">
-                    <img alt="watch">
-                    <img alt="share">
+                    <img src="icons/star-plus-outline.svg"alt="favorite">
+                    <img src="icons/eye-plus-outline.svg"alt="watch">
+                    <img src="icons/share-variant-outline.svg"alt="share">
                 </div>
             </div>
 
@@ -95,9 +95,9 @@
                 consequat,
                 vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui
                 <div class="project-nav">
-                    <img alt="favorite">
-                    <img alt="watch">
-                    <img alt="share">
+                    <img src="icons/star-plus-outline.svg"alt="favorite">
+                    <img src="icons/eye-plus-outline.svg"alt="watch">
+                    <img src="icons/share-variant-outline.svg"alt="share">
                 </div>
             </div>
             <div class="single-project">
@@ -107,9 +107,9 @@
                 possim assum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
                 tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud
                 <div class="project-nav">
-                    <img alt="favorite">
-                    <img alt="watch">
-                    <img alt="share">
+                    <img src="icons/star-plus-outline.svg"alt="favorite">
+                    <img src="icons/eye-plus-outline.svg"alt="watch">
+                    <img src="icons/share-variant-outline.svg"alt="share">
                 </div>
             </div>
             <div class="single-project">
@@ -121,9 +121,9 @@
                 est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
                 eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et
                 <div class="project-nav">
-                    <img alt="favorite">
-                    <img alt="watch">
-                    <img alt="share">
+                    <img src="icons/star-plus-outline.svg"alt="favorite">
+                    <img src="icons/eye-plus-outline.svg"alt="watch">
+                    <img src="icons/share-variant-outline.svg"alt="share">
                 </div>
             </div>
 
@@ -134,9 +134,9 @@
                 sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
                 no
                 <div class="project-nav">
-                    <img alt="favorite">
-                    <img alt="watch">
-                    <img alt="share">
+                    <img src="icons/star-plus-outline.svg"alt="favorite">
+                    <img src="icons/eye-plus-outline.svg"alt="watch">
+                    <img src="icons/share-variant-outline.svg"alt="share">
                 </div>
             </div>
         </div>
