added user profile icons

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="sidebar">
-        <h3 id="sidebar-header"><img alt="dashboard_img">Dashboard</h3>
+        <h3 id="sidebar-header"><img src="icons/abacus.svg" alt="dashboard_img">Dashboard</h3>
         <div class="sidebar-nav">
             <ul>
                 <li><img src="icons/home-account.svg" alt="home_img">Home</li>
@@ -37,9 +37,9 @@
 
             </form>
         </div>
-        <div class="user-settings"> <img alt="user_profile">Max Mustermann</div>
+        <div class="user-settings"> <img src="icons/paranoia.svg" alt="user_profile">Max Mustermann</div>
 
-        <div class="user-greeting"><img alt="user_profile"> Hi there,
+        <div class="user-greeting"><img src="icons/paranoia.svg" alt="user_profile"> Hi there,
             Max Mustermann( @m_squared)
         </div>
 
@@ -165,24 +165,24 @@
         <h3 id="trending-header">Trending</h3>
         <div class="trending">
             <div class="trend-user">
-                <img alt="trend-user_profile">
+                <img src="icons/tailwind.svg" alt="trend-user_profile">
                 @Jett
                 Knife Thrower
             </div>
             <div class="trend-user">
-                <img alt="trend-user_profile">
+                <img src="icons/resurrection.svg" alt="trend-user_profile">
                 @Sage
                 Healing life
             </div>
             <div class="trend-user">
-                <img alt="trend-user_profile">
+                <img src="icons/shock-bolt.svg" calt="trend-user_profile">
                 @Sova
                 Shock Dart Consigliere
             </div>
             <div class="trend-user">
-                <img alt="trend-user_profile">
-                @KJ
-                Robot Engineer
+                <img src="icons/boom-bot.svg" alt="trend-user_profile">
+                @Raze
+                Rocket Girl
             </div>
         </div>
     </div>
